# CExamples

./: .gitignore  CMakeLists.txt  ReadMe.md
src/C99/: CMakeLists.txt
src/C99/memory_allocation/: CMakeLists.txt
src/C99/memory_allocation/src/: realloc_simple.c
src/C99/object_oriented_programming/: CMakeLists.txt
src/C99/object_oriented_programming/src/: virtual_functions.c
src/C99/strings/: CMakeLists.txt
src/C99/strings/src/: ip32_validation.c  ip32_validation_using_sscanf.c  ip32_validation_using_sscanfv2.c  ip32_validation_using_strtok.c  ipv4_validation_using_sscanf.c  ipv4_validation_using_sscanfv2.c  ipv4_validation_using_trtok.c  ipv6_validation_using_strtok.c  sscanf_simple.c  strtok_simple.c  strtol_simple.c
src/C99/strtok/src/: ip32_validation.c
